Bug 1023156 - Cannot build Qt with errors in gfxQtPlatforms (with Qt 5.3)